--- a/templates/search/searchresults.jade
+++ b/templates/search/searchresults.jade
@@ -120,7 +120,7 @@ div(ng-cloak, ng-show="cards", ng-controller="searchResultsController")
                 ng-class="{'label-success': card.in_stock > 0, 'label-danger': card.in_stock < 0}"
                 ng-show="card.in_stock != null"
                 title='{% trans "This card is already in your stock" %}')
-                  {{'card.in_stock'|ng}} &nbsp;
+                  {{'card.in_stock'|ng}}
               span
                 //- a(href="/stock/card/quickcreate/{{ 'card.isbn' | ng }}", target="_blank") &nbsp; {{ 'card.title' | ng }}
                 a(ng-show="details_url_for(card)", href="{{ 'details_url_for(card)' | ng }}", target="_blank") &nbsp; {{ 'card.title' | ng }}
