--- a/templates/search/baskets.jade
+++ b/templates/search/baskets.jade
@@ -213,8 +213,11 @@ div(ng-cloak, ng-controller="basketsController")
               img.myImg(ng-show="it.cover", ng-src="{{ 'it.cover' | ng }}")
          td
            .col-md-12
+            span(ng-hide="it.isbn", title="Cette notice n'a pas d'ISBN. Elle ne peut pas être commandée via Dilicom.")
+              i.glyphicon.glyphicon-warning-sign &nbsp;
             a(href="{{ 'it.get_absolute_url' | ng}}") {{ 'it.title' | ng }}
             div(ng-show="show_images") {{'it.authors_repr'|ng}}
+            div(ng-show="show_images") {{ 'it.isbn' | ng }}
             div(class="badge badge-secondary", ng-show="show_images") {{'it.shelf'|ng}}
          td {{ 'it.pubs_repr' | ng }}
          td {{ 'it.dist_repr' | ng }}
