Bill: add bookshop's number (siret)
[ci skip]

--- a/templates/pdftemplates/pdf-bill-main.html
+++ b/templates/pdftemplates/pdf-bill-main.html
@@ -138,6 +138,9 @@
                             {% if bookshop.email %}
                             {{ bookshop.email }}<br>
                             {% endif %}
+                            {% if bookshop.company_number %}
+                            {{ bookshop.company_number }}<br>
+                            {% endif %}
                             {% if bookshop.bookshop_number %}
                             {{ bookshop.bookshop_number }}<br>
                             {% endif %}
