--- a/templates/search/upload.html
+++ b/templates/search/upload.html
@@ -62,7 +62,12 @@
 
   <textarea id="inputrows" name="inputrows"
       rows="12" cols="122">
-// Copy-paste all rows here.
+// Copiez-collez les lignes ici.
+//
+// Format accepté:
+// 1 isbn par ligne
+// ou
+// isbn;quantité (format CSV Dilicom)
   </textarea>
 
   <input type="hidden" name="source" value="{{ source }}">
