(minor) mail confirmation: "nous revenons vers vous…"
[ci skip]

--- a/templates/mailer/client_confirmation_template.html
+++ b/templates/mailer/client_confirmation_template.html
@@ -80,7 +80,7 @@
 
         {% else %}
         <p>
-          Vous pouvez venir retirer les livres à la librairie.
+          Nous revenons vite vers vous quand les livres sont disponibles au retrait dans la librairie et vous pourrez venir les chercher.
         </p>
         {% endif %}
 
