--- a/templates/pdftemplates/pdf-bill-main.html
+++ b/templates/pdftemplates/pdf-bill-main.html
@@ -192,7 +192,12 @@
 
             <tr>
               <td colspan="2">
-                <h3> {{ document_title }}</h3>
+                <h3> {{ document_title }}
+                  <br>
+                  {% if bon_de_commande %}
+                  <span> Bon de commande: {{ bon_de_commande }} </span>
+                  {% endif %}
+                </h3>
               </td>
             </tr>
 
