History month: export with new CSV format: total revenue / day (CA par jour)
[ci skip]

--- a/templates/search/history_sells.jade
+++ b/templates/search/history_sells.jade
@@ -49,6 +49,7 @@ span
            li
              a(href="/history/sells/month/{{day.year}}-{{day.month}}/export?fileformat=txt", title='') {% trans "All sells of this month" %} - txt
              a(href="/history/sells/month/{{day.year}}-{{day.month}}/export?fileformat=csv", title='') {% trans "All sells of this month" %} - csv
+             a(href="/history/sells/month/{{day.year}}-{{day.month}}/export?fileformat=csv&report=totalperday", title='') {% trans "Earnings per day" %} - csv
 
 
 .row
