(minor) Sell: fix currency symbol not aligned
[ci skip]

--- a/templates/search/sell_create.jade
+++ b/templates/search/sell_create.jade
@@ -218,8 +218,8 @@ div.ng-cloak(ng-controller="sellController")
             title="{% trans 'There is a conflict with deposits.' %}")
           //- i.glyphicon.glyphicon-exclamation-s
 
-        .col-md-2
-            p.input-group.noprint
+        .col-md-2.noprint
+            p.input-group
                 label.sr-only {% trans "Price" %}
                 input.form-control(
                   type="number", step="0.1", min=0
