History: show total per payment method (at last!)

--- a/templates/search/history_sells_day.html
+++ b/templates/search/history_sells_day.html
@@ -62,6 +62,9 @@
     <div class="panel-heading">{% trans "Cash register" %}</div>
     <div class="panel-body">
       <h4> {{ sells_data.total_price_sold_fmt }} </h4>
+
+      <div class="col-md-12" style="padding-left: 0; margin-left: 0">
+      <div class="col-md-6">
       <div>
         <span class="badge badge-info"> {% trans "Books" %} </span>
         <span> {{ sells_data.total_price_sold_books_fmt }} </span>
@@ -77,7 +80,17 @@
       </div>
       {% endif %}
       {% endfor %}
+      </div>
 
+      <div class="col-md-6">
+      {% for total_per_payment in total_per_payment_items %}
+      <div>
+        <i class="glyphicon glyphicon-hand-right"></i>
+        {{ total_per_payment.0 }}: {{ total_per_payment.1 }}
+      </div>
+      {% endfor %}
+      </div>
+      </div>
     </div>
   </div>
 
