--- a/templates/search/history_sells_day.html
+++ b/templates/search/history_sells_day.html
@@ -252,7 +252,7 @@
           class="mouse-pointer glyphicon glyphicon-remove"
           onclick="sellUndo({{ sell_id }})"
           {% else %}
-          class="glyphicon glyphicon-remove"
+          class="glyphicon glyphicon-ban-circle"
           disabled
           {% endif %}
       ></div>
